# harmonium

./: .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  DESIGN_SONORE.md  DIAGRAMME_2_NIVEAUX.md  FAQ_TONALITE.md  Makefile  PROGRESSION_HARMONIQUE.md  README.md  RECAP_PROGRESSION.md  audit.toml  dev_server.sh  rust_out  test_chord_progression.sh  visualize_progression.sh
.cargo/: config.toml
.github/workflows/: deploy.yml  quality.yml  release.yml
docs/: vexflow_integration.md
harmonium_ai/: Cargo.toml  README.md
harmonium_ai/src/: ai.rs  lib.rs  mapper.rs  semantic.rs
harmonium_audio/: Cargo.toml  README.md
harmonium_audio/src/: lib.rs  voice_manager.rs
harmonium_audio/src/backend/: abc_backend.rs  adapter.rs  midi_backend.rs  mod.rs  odin2_backend.rs  recorder.rs  synth_backend.rs  vst_midi_backend.rs  wav_backend.rs
harmonium_audio/src/realtime/: mod.rs  rt_check.rs
harmonium_audio/src/synthesis/: mod.rs  modulation.rs  morph.rs  presets.rs  types.rs
harmonium_audio/src/voicing/: block_chord.rs  comping.rs  mod.rs  monophonic.rs  shell.rs  voicer.rs
harmonium_audio/tests/: export_validation.rs
harmonium_bevy/: Cargo.toml
harmonium_bevy/src/: assets.rs  components.rs  lib.rs  mirror.rs  sound.rs  systems.rs
harmonium_cli/: Cargo.toml  README.md
harmonium_cli/src/: completer.rs  export.rs  help.rs  main.rs  parser.rs  repl.rs
harmonium_core/: Cargo.toml  README.md  build.rs
harmonium_core/obs/doc/: ENGINE_REFACTOR_STATUS.md  ORIGINAL_PLAN.md  README.md  REBUILD_PROGRESS.md
harmonium_core/src/: command.rs  controller.rs  dna.rs  events.rs  export.rs  fractal.rs  lib.rs  log.rs  notation.rs  params.rs  report.rs  score_buffer.rs  sequencer.rs  style_profile.rs  truth.rs  tuning.rs
harmonium_core/src/exporters/: mod.rs  musicxml.rs  musicxml.rs.bak  truth.rs  version.rs
harmonium_core/src/exporters/dna/: mod.rs
harmonium_core/src/harmony/: basic.rs  chord.rs  driver.rs  lydian_chromatic.rs  melody.rs  mod.rs  neo_riemannian.rs  parsimonious.rs  pivot.rs  steedman_grammar.rs  voice_leading.rs
harmonium_core/src/tests/: mod.rs  sustain_validation.rs
harmonium_core/src/timeline/: export.rs  generator.rs  midi_export.rs  mod.rs  pointers.rs
harmonium_core/tests/: music_generation_tests.rs  vexflow_format_tests.rs
harmonium_host/: Cargo.toml  README.md
harmonium_host/src/: audio.rs  composer.rs  engine.rs  lib.rs  main.rs  native_handle.rs  playback.rs  score.rs  timeline_engine.rs  vst_plugin.rs
harmonium_host/src/vst_gui/: message_handler.rs  mod.rs  state_serializer.rs  webview_editor.rs
harmonium_host/tests/: barline_integration_tests.rs  deterministic_seek_tests.rs  golden_file_comparison.rs  measure_snapshot_golden.rs  score_integration_tests.rs  vexflow_integration_tests.rs
harmonium_host/tests/golden_measures/: classic_groove_seed100_8bars.json  default_seed42_8bars.json  euclidean_seed100_8bars.json  harmony_basic_seed200_8bars.json  harmony_driver_seed200_8bars.json  incremental_seed42_16bars.json  matrix_classic_groove_basic_3_4_seed1013.json  matrix_classic_groove_basic_4_4_seed1012.json  matrix_classic_groove_basic_5_4_seed1014.json  matrix_classic_groove_driver_3_4_seed1016.json  matrix_classic_groove_driver_4_4_seed1015.json  matrix_classic_groove_driver_5_4_seed1017.json  matrix_euclidean_basic_3_4_seed1001.json  matrix_euclidean_basic_4_4_seed1000.json  matrix_euclidean_basic_5_4_seed1002.json  matrix_euclidean_driver_3_4_seed1004.json  matrix_euclidean_driver_4_4_seed1003.json  matrix_euclidean_driver_5_4_seed1005.json  matrix_perfect_balance_basic_3_4_seed1007.json  matrix_perfect_balance_basic_4_4_seed1006.json  matrix_perfect_balance_basic_5_4_seed1008.json  matrix_perfect_balance_driver_3_4_seed1010.json  matrix_perfect_balance_driver_4_4_seed1009.json  matrix_perfect_balance_driver_5_4_seed1011.json  perfect_balance_seed100_8bars.json  timesig_3_4_seed300_8bars.json  timesig_5_4_seed300_8bars.json
harmonium_lab/: Cargo.toml
harmonium_lab/src/: dna_types.rs  lib.rs  main.rs  render.rs
harmonium_lab/src/agent/: claude.rs  mod.rs
harmonium_lab/src/benchmark/: mod.rs  profiles.rs
harmonium_lab/src/dna/: comparator.rs  mod.rs
harmonium_lab/src/ingest/: mod.rs  musicxml.rs
homebrew/: harmonium-plugins.rb  harmonium.rb
notes/: ARTICULATION_DYNAMIQUE.md  DESIGN_SONORE_TECHNIQUE.md  GUIDE_TEST.md  MORPHING_IMPLEMENTATION.md  PROCHAINES_ETAPES_ADSR.md  SESSION_ARTICULATION_30DEC2024.md  UI_HARMONIQUE.md  VISUALISATION_ARTICULATION.md  VISUAL_SUMMARY.md  WEB_CONTROLS.md
obs/harmonium/: AI & Emotion.md  Harmony System.md  Project Overview.md  Rhythm System.md  Technical Architecture.md
scripts/: README_OMR.md  oemer_wrapper.py  requirements.txt  setup_omr.sh  sheet_to_truth.py  video_to_osc.py
src/: ai.rs  audio.rs  engine.rs  events.rs  fractal.rs  harmony.rs  lib.rs  log.rs  main.rs  mapper.rs  params.rs  progression.rs  sequencer.rs  voice_manager.rs  vst_plugin.rs
src/backend/: abc_backend.rs  midi_backend.rs  mod.rs  odin2_backend.rs  recorder.rs  synth_backend.rs  vst_midi_backend.rs  wav_backend.rs
src/harmony/: basic.rs  chord.rs  driver.rs  lydian_chromatic.rs  melody.rs  mod.rs  neo_riemannian.rs  parsimonious.rs  pivot.rs  steedman_grammar.rs
src/synthesis/: mod.rs  modulation.rs  morph.rs  presets.rs  presets.toml
src/voicing/: block_chord.rs  comping.rs  shell.rs  voicer.rs
src/vst_gui/: message_handler.rs  mod.rs  state_serializer.rs  webview_editor.rs
web/: .cfignore  .clauderc.md  .eslintrc.cjs  .gitignore  .prettierignore  AGENTS_TDD.md  README.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vite.vst.config.ts  vitest.config.ts
web/playwright-report/: index.html
web/src/lib/: ai.ts  ai.worker.ts  index.ts  tokens.css
web/src/lib/bridge/: base-bridge.ts  index.ts  types.ts  vst-bridge.ts  (+2 more)
web/src/routes/: +page.server.ts  +page.svelte  layout.css
web/src/vst/: App.svelte  app.css  index.html  main.ts
web/static/: test.sf2
web/tests/: event-streaming.spec.ts  livescore.spec.ts
web2/: DESIGN.md
xtask/: Cargo.toml
(+48 files in other folders)
