[workspace]
members = [
    "harmonium_core",
    "harmonium_ai",
    "harmonium_audio",
    "harmonium_host",
    "harmonium_bevy",
    "harmonium_lab",
    "xtask"
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
fundsp = "0.20.0"
oxisynth = "0.1.0"
rtrb = "0.3"
arrayvec = "0.7"
midly = "0.5.3"
triple_buffer = "8.0"
once_cell = "1.20"
log = "0.4"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "allow"

[workspace.lints.clippy]
all = "warn"
unwrap_used = "warn"
panic = "warn"
todo = "warn"
expect_used = "warn"
