[package]
name = "harmonium_ai"
version = "0.1.0"
edition = "2024"

[dependencies]
harmonium_core = { path = "../harmonium_core" }
serde = { version = "1.0", features = ["derive"] }
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = { version = "0.8", default-features = false }
tokenizers = { version = "0.15", default-features = false, features = ["unstable_wasm"] }
wasm-bindgen = "0.2"
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
