[package]
name = "harmonium_audio"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
harmonium_core = { path = "../harmonium_core" }
fundsp = "0.20.0"
oxisynth = "0.1.0"
hound = "3.5.1"
midly = "0.5.3"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.18"
toml = "0.7"

[dependencies.odin2-core]
git = "https://github.com/bascanada/odin-rs"
features = ["std"]
optional = true

[features]
default = ["odin2"]
odin2 = ["odin2-core"]
vst = []
