[package]
name = "harmonium-cli"
version = "0.1.0"
edition = "2021"
authors = ["BasCanada"]
description = "Interactive CLI for Harmonium generative music engine"
license = "MIT"

[[bin]]
name = "harmonium-cli"
path = "src/main.rs"

[dependencies]
# Core Harmonium dependencies
harmonium_core = { path = "../harmonium_core" }
harmonium_audio = { path = "../harmonium_audio" }
harmonium_ai = { path = "../harmonium_ai" }
harmonium = { path = "../harmonium_host", default-features = false, features = ["standalone"] }

# CLI dependencies
rustyline = "14.0"  # Interactive line editing with history
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"     # Colored terminal output

# Utilities
anyhow = "1.0"      # Error handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"        # Home directory location

[dev-dependencies]
