[package]
name = "harmonium_core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
rust-music-theory = "0.3.0"
midly = "0.5.3"
arrayvec = "0.7"
bevy_reflect = "0.17.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }
