[package]
name = "harmonium_core"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rand = "0.8.5"
rust-music-theory = "0.3.0"
midly = "0.5.3"
arrayvec = "0.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }
