[package]
name = "harmonium_core"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
rust-music-theory = "0.3.0"
midly = "0.5.3"
arrayvec = { version = "0.7", features = ["serde"] }
serde-big-array = "0.5"
rtrb = "0.3"

[dev-dependencies]
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }
