[package]
name = "harmonium"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "harmonium"
path = "src/main.rs"
required-features = ["standalone"]

[features]
default = ["standalone", "wasm", "odin2", "ai"]
standalone = ["cpal"]
vst = ["nih_plug", "harmonium_audio/vst"]
vst-gui = ["vst", "nih_plug_webview"]
wasm = ["wasm-bindgen", "console_error_panic_hook", "serde-wasm-bindgen", "js-sys", "web-sys"]
odin2 = ["harmonium_audio/odin2"]
ai = []

[dependencies]
harmonium_core = { path = "../harmonium_core" }
harmonium_ai = { path = "../harmonium_ai" }
harmonium_audio = { path = "../harmonium_audio" }

cpal = { version = "0.15", features = ["wasm-bindgen"], optional = true }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", optional = true }
nih_plug_webview = { git = "https://github.com/httnn/nih-plug-webview.git", optional = true }
rtrb = "0.3"
triple_buffer = "8.0"
arrayvec = "0.7"
crossbeam-channel = "0.5"
rosc = "0.10"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
rust-music-theory = "0.3.0"
serde_json = "1.0"
once_cell = "1.20"
ctrlc = "3.4"

wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
js-sys = { version = "0.3", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# TODO: Remove dual getrandom dependency once tokenizers updates to rand 0.9.
# tokenizers uses rand 0.8 -> getrandom 0.2 (needs "js" feature)
# candle uses rand 0.9 -> getrandom 0.3 (needs "wasm_js" feature)
getrandom_v03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
getrandom_v02 = { package = "getrandom", version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Navigator",
    "AudioContext",
    "AudioContextOptions",
    "AudioDestinationNode",
    "AudioNode",
    "AudioParam",
    "GainNode",
    "HtmlMediaElement",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "Event",
], optional = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
